@@ -4,5 +4,5 @@
 #
 # Copyright 1997 - July 2008 CWI, August 2008 - 2017 MonetDB B.V.
 
-SUBDIRS = HAVE_SPHINXCLIENT?sphinx mal_optimizer_template HAVE_LIBR?rapi
+SUBDIRS = mal_optimizer_template HAVE_LIBR?rapi
 
