@@ -1,33 +1,0 @@
-# This Source Code Form is subject to the terms of the Mozilla Public
-# License, v. 2.0.  If a copy of the MPL was not distributed with this
-# file, You can obtain one at http://mozilla.org/MPL/2.0/.
-#
-# Copyright 1997 - July 2008 CWI, August 2008 - 2017 MonetDB B.V.
-
-INCLUDES = ../../mal \
-		   ../../../common/options \
-		   ../../../common/stream \
-		   ../../../gdk \
-		   $(SPHINXCLIENT_CFLAGS)
-
-lib__sphinx = {
-	MODULE
-	DIR = libdir/monetdb5
-	SOURCES = sphinx.c sphinx.h
-
-	LIBS = ../../tools/libmonetdb5 $(SPHINXCLIENT_LIBS)
-}
-
-headers_sphinx_mal = {
-	HEADERS = mal
-	DIR = libdir/monetdb5
-	SOURCES = sphinx.mal
-}
-
-headers_autoload = {
-        HEADERS = mal
-        DIR = libdir/monetdb5/autoload
-        SOURCES = 30_sphinx.mal
-}
-
-EXTRA_DIST = sphinx.mal 30_sphinx.mal
