@@ -10652,12 +10652,6 @@ Ready.
 [ "shp",	"attach",	"pattern shp.attach(filename:str):void ",	"SHPattach;",	"Register an ESRI Shapefile in the vault catalog"	]
 [ "shp",	"import",	"pattern shp.import(fileid:int):void ",	"SHPimport;",	"Import an ESRI Shapefile with given id into the vault"	]
 [ "shp",	"import",	"pattern shp.import(fileid:int, po:wkb):void ",	"SHPpartialimport;",	"Partially import an ESRI Shapefile with given id into the vault"	]
-[ "sphinx",	"search",	"function sphinx.search(q:str):bat[:lng];",	"",	""	]
-[ "sphinx",	"searchIndex",	"function sphinx.searchIndex(q:str, i:str):bat[:lng];",	"",	""	]
-[ "sphinx",	"searchIndexLimit",	"command sphinx.searchIndexLimit(q:str, i:str, l:int):bat[:lng] ",	"SPHINXsearchIndexLimit;",	"Search the query on the specified index, with limit"	]
-[ "sphinx",	"sphinx_search",	"function sphinx.sphinx_search(q:str):bat[:lng];",	"",	""	]
-[ "sphinx",	"sphinx_searchIndex",	"function sphinx.sphinx_searchIndex(q:str, i:str):bat[:lng];",	"",	""	]
-[ "sphinx",	"sphinx_searchIndexLimit",	"function sphinx.sphinx_searchIndexLimit(q:str, i:str, l:int):bat[:lng];",	"",	""	]
 [ "sql",	"abort",	"pattern sql.abort():void ",	"SQLabort;",	"Trigger the abort operation for a MAL block"	]
 [ "sql",	"affectedRows",	"pattern sql.affectedRows(mvc:int, nr:lng):int ",	"mvc_affected_rows_wrap;",	"export the number of affected rows by the current query"	]
 [ "sql",	"all",	"inline function sql.all(b:bat[:any_1], gp:bat[:oid], gpe:bat[:oid], no_nil:bit):bat[:any_1];",	"",	""	]
